# Spark_Core

./: pyproject.toml  word_count.py
src/exo2/aggregate/: spark_agregate_job.py
src/exo2/clean/: spark_clean_job.py
src/exo4/: no_udf.py  python_udf.py  scala_udf.py
src/resources/exo1/: exo1.py
src/resources/exo1/output/count=1/: part-00000-09aa90ac-cedc-429b-917c-355d0d418b23.c000.snappy.parquet
src/resources/exo1/output/count=10/: part-00000-09aa90ac-cedc-429b-917c-355d0d418b23.c000.snappy.parquet
src/resources/exo1/output/count=11/: part-00000-09aa90ac-cedc-429b-917c-355d0d418b23.c000.snappy.parquet
src/resources/exo1/output/count=12/: part-00000-09aa90ac-cedc-429b-917c-355d0d418b23.c000.snappy.parquet
src/tests/tests_integration/: test_integration_spark_agregate_job.py  test_integration_spark_clean_job.py  test_integration_windows.py
src/tests/tests_unitaires/exo2/clean/: test_specifite_corse.py
src/tests/tests_unitaires/exo4/: test_python_udf.py  test_scala_udf.py  test_windows.py
tests_integration/: integration_spark_agregate_job.py  integration_spark_clean_job.py  integration_word_count.py  test_integration_spark_agregate_job.py  test_integration_spark_clean_job.py  test_integration_word_count.py
tests_unitaires/exo1/: test_calculate_word_count.py
tests_unitaires/exo2/aggregate/: error_test_compute_population_by_departement.py  test_compute_population_by_departement.py  test_error_compute_population_by_departement.py
tests_unitaires/exo2/clean/: test_departement_4_caracteres.py  test_join_clients_villes.py  test_specifite_corse.py
(+43 files in other folders)
