[tool.poetry]
name = "spark-handson"
version = "0.1.0"
description = "Résolvez les exercices"
authors = ["Franck Cussac"]
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "~3.11.4"

[tool.poetry.dev-dependencies]
pyspark = "3.3.0"
pytest = "7.1.2"
awsglue-dev = "^2021.12.30"

[tool.poetry.scripts]
wordcount = "src.exo1.main:main"
clean = "src.exo2.spark_clean_job:main"
aggregate = "src.exo2.spark_aggregate_job:main"
python_udf = "src.exo4.python_udf:main"
scala_udf = "src.exo4.scala_udf:main"
no_udf = "src.exo4.no_udf:main"
